...
    }

    Scaffold(
        scaffoldState = scaffoldState,
        topBar = {
            Text(
                text = if (taskIdState == -1) "Add Task" else "Update Task",
                fontSize = 20.sp,
                color = MaterialTheme.colors.primaryVariant,
                modifier = Modifier
                    .padding(16.dp)
                    .semantics { contentDescription = if (taskIdState == -1) "Add Task" else "Update Task" },
                fontWeight = FontWeight(600)
...
